--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,12 @@
 {
-  "short_name": "PizzeriaMaster",
-  "name": "Pizzeria Master - Gestão Artigiano",
-  "start_url": "./index.html",
+  "name": "Pizzeria Master Pro",
+  "short_name": "MasterPro",
+  "start_url": ".",
   "display": "standalone",
-  "background_color": "#F2F2F7",
+  "background_color": "#000000",
   "theme_color": "#008C45",
   "icons": [
-    {
-      "src": "https://cdn-icons-png.flaticon.com/512/3595/3595455.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
+    { "src": "icons/icon-192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "icons/icon-512.png", "sizes": "512x512", "type": "image/png" }
   ]
 }
