--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,20 @@
 {
-  "name": "Pizzeria Master Pro",
-  "short_name": "MasterPro",
+  "name": "Painel Master Pizzaria",
+  "short_name": "Pizzaria ADM",
   "start_url": ".",
   "display": "standalone",
-  "background_color": "#000000",
-  "theme_color": "#008C45",
+  "background_color": "#ffffff",
+  "theme_color": "#b71c1c",
   "icons": [
-    { "src": "icons/icon-192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "icons/icon-512.png", "sizes": "512x512", "type": "image/png" }
+    {
+      "src": "icons/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
   ]
 }
