--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-  "name": "Pizzeria Master PRO",
+  "name": "Artigiano PRO",
   "short_name": "Artigiano",
   "start_url": "index.html",
   "display": "standalone",
-  "background_color": "#f2f2f7",
-  "theme_color": "#007aff",
+  "background_color": "#f3f4f6",
+  "theme_color": "#1c1c1e",
   "icons": [
     {
       "src": "https://cdn-icons-png.flaticon.com/512/3132/3132693.png",
