--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pizza-master-v1.8.0",
+  "name": "pizza-master",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,7 +11,8 @@
   "dependencies": {
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "@google/genai": "^0.21.0"
+    "@google/genai": "^0.21.0",
+    "firebase": "^12.9.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
