--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pizza-master",
+  "name": "pizza-master-v3.0---artigiano",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,10 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@google/genai": "^0.21.0",
-    "firebase": "^10.7.1"
+    "react-dom": "^19.2.4",
+    "react": "^19.2.4",
+    "recharts": "^3.7.0",
+    "lucide-react": "^0.563.0",
+    "firebase": "^12.9.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
